k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-api-deployment
  namespace: patient-management
  labels:
    app: patient-api
    tier: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: patient-api
      tier: api
  template:
    metadata:
      labels:
        app: patient-api
        tier: api
    spec:
      containers:
        - name: patient-api
          image: vikaskumarjagga/patient-management:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
