k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-api-service
  namespace: patient-management
  labels:
    app: patient-api
    tier: api
spec:
  type: ClusterIP
  selector:
    app: patient-api
    tier: api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
