k8s/service-db-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: patient-management
  labels:
    app: postgres
    tier: database
spec:
  clusterIP: None
  selector:
    app: postgres
    tier: database
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
