k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: patient-management
  labels:
    app: postgres
    tier: database
spec:
  type: ClusterIP
  selector:
    app: postgres
    tier: database
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
